traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: not found: value jgetMondeLargeur
        setPos(jgetMondeLargeur()-1,i)
               ^